--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LumenRoute AI - Smart Commute Intelligence</title>
-  <meta name="description" content="Smart commute intelligence for safer, greener Georgia. Real-time hazard monitoring and AI-powered eco-friendly route recommendations." />
-  <meta name="author" content="LumenRoute AI" />
+  <title>LumenRoute - Smart Commute Intelligence</title>
+  <meta name="description"
+    content="Smart commute intelligence for safer, greener Georgia. Real-time hazard monitoring and AI-powered eco-friendly route recommendations." />
+  <meta name="author" content="LumenRoute" />
 
-  <meta property="og:title" content="LumenRoute AI - Smart Commute Intelligence" />
-  <meta property="og:description" content="Smart commute intelligence for safer, greener Georgia. Real-time hazard monitoring and AI-powered eco-friendly route recommendations." />
+  <meta property="og:title" content="LumenRoute - Smart Commute Intelligence" />
+  <meta property="og:description"
+    content="Smart commute intelligence for safer, greener Georgia. Real-time hazard monitoring and AI-powered eco-friendly route recommendations." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/og-base.png" />
 
